add routes for showing, uploading and deleting project preview images
