# src/backend/src/morpheus/project/presentation/api/write/ProjectWriteRequestHandlers.py
@@ -2,10 +2,10 @@ import dataclasses
 from typing import TypedDict
 from flask import Request, abort
 
-from morpheus.common.presentation.helpers.file_upload import remove_uploaded_file, move_uploaded_file_to_tmp_dir
-from morpheus.common.types.Exceptions import NotFoundException
+from morpheus.common.presentation.api.helpers.file_upload import remove_uploaded_file, move_uploaded_file_to_tmp_dir
+from ....application.read.ProjectsReader import projects_reader
 from ....application.write.ProjectCommandHandlers import CreateProjectCommand, CreateProjectCommandHandler, UpdateMetadataCommand, UpdateMetadataCommandHandler, \
-    UpdatePreviewImageCommand, UpdatePreviewImageCommandHandler
+    UpdatePreviewImageCommand, UpdatePreviewImageCommandHandler, DeletePreviewImageCommand, DeletePreviewImageCommandHandler
 from ....incoming import get_logged_in_user_id
 from ....types.Asset import AssetId
 from ....types.Exceptions import InvalidMimeTypeException
@@ -82,11 +82,18 @@ class UpdateMetadataRequestHandler:
         if not request.is_json:
             abort(400, 'Request body must be JSON')
 
-        user_id = get_logged_in_user_id()
+        user_id = UserId.try_from_str(get_logged_in_user_id())
         if user_id is None:
             abort(401, 'Unauthorized')
 
         project_id = ProjectId.from_str(project_id_url_parameter)
+        if not projects_reader.project_exists(project_id):
+            abort(404, f'Project with id {project_id.to_str()} does not exist')
+
+        # TODO check permissions
+        # if not permissions_reader.has_permission(project_id=project_id, user_id=user_id, permission=PermissionType.UPDATE):
+        #     abort(403, 'Forbidden')
+
         update_model_metadata = UpdateMetadataRequest.from_dict(obj=request.json)
 
         name = None
@@ -106,7 +113,7 @@ class UpdateMetadataRequestHandler:
             name=name,
             description=description,
             tags=tags,
-            updated_by=UserId.from_str(user_id)
+            updated_by=user_id
         )
 
         UpdateMetadataCommandHandler.handle(command=command)
@@ -115,27 +122,57 @@ class UpdateMetadataRequestHandler:
 
 class UploadPreviewImageRequestHandler:
     @staticmethod
-    def handle(request: Request, project_id: str):
-        user_id = get_logged_in_user_id()
+    def handle(request: Request, project_id_url_parameter: str):
+        user_id = UserId.try_from_str(get_logged_in_user_id())
         if user_id is None:
             abort(401, 'Unauthorized')
+
+        project_id = ProjectId.from_str(project_id_url_parameter)
+        if not projects_reader.project_exists(project_id):
+            abort(404, f'Project with id {project_id.to_str()} does not exist')
+
+        # TODO check permissions
+        # if not permissions_reader.has_permission(project_id=project_id, user_id=user_id, permission=PermissionType.UPDATE):
+        #     abort(403, 'Forbidden')
 
         file_name, file_path = move_uploaded_file_to_tmp_dir('file', request)
 
         try:
             command = UpdatePreviewImageCommand(
                 asset_id=AssetId.new(),
-                project_id=ProjectId.from_str(project_id),
+                project_id=project_id,
                 file_name=file_name,
                 file_path=file_path,
-                updated_by=UserId.from_str(user_id)
+                updated_by=user_id
             )
             UpdatePreviewImageCommandHandler.handle(command)
-        except NotFoundException as e:
-            abort(404, str(e))
         except InvalidMimeTypeException as e:
             abort(422, str(e))
         finally:
             remove_uploaded_file(file_path)
+
+        return '', 204
+
+
+class DeletePreviewImageRequestHandler:
+    @staticmethod
+    def handle(request: Request, project_id_url_parameter: str):
+        user_id = UserId.try_from_str(get_logged_in_user_id())
+        if user_id is None:
+            abort(401, 'Unauthorized')
+
+        project_id = ProjectId.from_str(project_id_url_parameter)
+        if not projects_reader.project_exists(project_id):
+            abort(404, f'Project with id {project_id.to_str()} does not exist')
+
+        # TODO check permissions
+        # if not permissions_reader.has_permission(project_id=project_id, user_id=user_id, permission=PermissionType.UPDATE):
+        #     abort(403, 'Forbidden')
+
+        command = DeletePreviewImageCommand(
+            project_id=project_id,
+            updated_by=user_id
+        )
+        DeletePreviewImageCommandHandler.handle(command)
 
         return '', 204
